# genai_cpp_tests

./: README.md
session_1_group_work/: CMakeLists.txt
session_1_group_work/src/: DateUtils.cpp  DateUtils.h  StringManipulation.cpp  StringManipulation.h
session_1_group_work/tests/: CMakeLists.txt  TestDateUtils.cpp
session_1_setup/: CMakeLists.txt
session_1_setup/.github/instructions/: cpp.instructions.md
session_1_setup/src/: MathOperations.cpp  MathOperations.h
session_1_setup/tests/: CMakeLists.txt  TestMathOperations.cpp
session_2_example/: CMakeLists.txt  README.md
session_2_example/src/: OrderProcessor.cpp  OrderProcessor.h  PaymentGateway.h
session_2_example/tests/: CMakeLists.txt  TestOrderProcessor.cpp
session_2_group_work/: CMakeLists.txt  README.md
session_2_group_work/src/: Database.h  UserManager.cpp  UserManager.h
session_2_group_work/tests/: CMakeLists.txt  TestUserManager.cpp
